--- a/org/7_probability.org
+++ b/org/7_probability.org
@@ -69,21 +69,22 @@ Source: [[https://www.explainxkcd.com/wiki/index.php/1132:_Frequentists_vs._Baye
   die roll is assumed to be /identical/ and /objective/, though it never
   really is.
 
-- The (empirical) law of large numbers guarantees that a large enough
-  number of observations will yield the ideal ~Pr(A)~.
+- The (empirical) law of large numbers "guarantees" that a large
+  enough number of observations will yield the ideal ~Pr(A)~.
 
 - We can *simulate* this using R:
   1) define a standard, six-sided, fair die
   2) roll die once (with replacement)
   #+begin_src R
     die <- rep(x=1:6)  # define a standard die
+    die_hard <- letters[1:3]
     sample(
-      x = die, # vector to sample from
+      x = die_hard, # vector to sample from
       size = 1)  # size of sample - "roll die once"
   #+end_src
 
   #+RESULTS:
-  : [1] 2
+  : [1] "b"
 
 - ~sample~ takes a sample of the specified ~size~ from the elements of ~x~
   either with or without replacement (~replace~).
@@ -117,11 +118,11 @@ Source: [[https://www.explainxkcd.com/wiki/index.php/1132:_Frequentists_vs._Baye
 
   #+RESULTS: roll_die
   : events
-  :  1  2  3  4  5  6
-  : 15 24 11 15 14 21
+  :  1  2  3  4  5  6 
+  : 21 13 17 12 18 19
   : events
-  :    1    2    3    4    5    6
-  : 0.15 0.24 0.11 0.15 0.14 0.21
+  :    1    2    3    4    5    6 
+  : 0.21 0.13 0.17 0.12 0.18 0.19
   : [1] 0.1666667
 
 - The law of large number is visible in the barplot:
@@ -153,7 +154,7 @@ Source: [[https://www.explainxkcd.com/wiki/index.php/1132:_Frequentists_vs._Baye
 #+attr_html: :width 400px
 [[../img/7_marriage.jpg]]
 
-- Say you're married and arrive home much later than usual.
+- Say you're married and arrive home much later than usual (event A).
 
 - Let B be the event "your partner is angry" because you're late.
 
