--- a/org/8_laws_review.org
+++ b/org/8_laws_review.org
@@ -12,61 +12,66 @@
 
 - Replace ~[yourname]~ at the top by your own name and add ~(pledged)~
 - Add ~entitiespretty~ to the ~#+STARTUP~ line to make entities pretty
-  
+
 * TODO Problems
 
-1) What does [[https://github.com/birkenkrahe/dsmath/blob/main/img/dc_prob.png][this figure]] illustrate?
+1) Consider two events A and B each with outcomes 0 or 1:
 
-2) What is ~Pr(A \cap B)~ (AND) for independent events ~A~ and ~B~?
+   What is ~1 - (Pr(A=0) + Pr(A=1) = Pr(B=0) + Pr(B=1))~?
 
-3) What is ~Pr(A \cap B)~ as a Venn diagram?
 
-4) What happens to the Venn diagram if the probabilities are not equal?
+2) What does [[https://github.com/birkenkrahe/dsmath/blob/main/img/dc_prob.png][this figure]] illustrate?
 
-5) How do you simulate ~Pr(A \cap B)~ if ~Pr(A)=0.4~ and ~Pr(B)=.2~?
+3) What is ~Pr(A \cap B)~ (AND) for independent events ~A~ and ~B~?
+
+4) What is ~Pr(A \cap B)~ as a Venn diagram?
+
+5) What happens to the Venn diagram if the probabilities are not equal?
+
+6) How do you simulate ~Pr(A \cap B)~ if ~Pr(A)=0.4~ and ~Pr(B)=.2~?
 
    #+begin_src R
 
    #+end_src
 
-6) What is ~Pr(A \cup B)~ (OR) as a Venn diagram?
+7) What is ~Pr(A \cup B)~ (OR) as a Venn diagram?
 
-7) What is ~Pr(A \cup B)~ for independent events ~A~ and ~B~?
+8) What is ~Pr(A \cup B)~ for independent events ~A~ and ~B~?
 
-8) A and B are independent events. How do you simulate ~Pr(A \cup B)~ if
+9) A and B are independent events. How do you simulate ~Pr(A \cup B)~ if
    ~Pr(A) = 0.2~ and ~Pr(B) = 0.6~?
    #+begin_src R
 
    #+end_src
 
-9) Multiplying a random variable by a factor will also multiply the
-   expected value by that factor.
+10) Multiplying a random variable by a factor will also multiply the
+    expected value by that factor.
 
-   Create a histogram of ~X \tilde Binomial(10,0.5)~ and a histogram
-   ~Y\tilde3*X~, put them into one plot array, and show the expected
-   value in each histogram.
+    Create a histogram of ~X \tilde Binomial(10,0.5)~ and a histogram
+    ~Y\tilde3*X~, put them into one plot array, and show the expected
+    value in each histogram.
 
-   Remember that the x-axis scales for each plot are chosen based on
-   the plot data - you have to align them to make the plots comparable.
+    Remember that the x-axis scales for each plot are chosen based on
+    the plot data - you have to align them to make the plots comparable.
 
-   #+begin_src R :results graphics file :file hist.png
+    #+begin_src R :results graphics file :file hist.png
 
-   #+end_src
+    #+end_src
 
-10) The multiplication rule for random variables also applies to the
+11) The multiplication rule for random variables also applies to the
     spread. Use a function to show how the spread changes in the
     previous example, from X to Y.
     #+begin_src R
 
     #+end_src
 
-11) What is the expected value of the binomial distributions X + Y?
+12) What is the expected value of the binomial distributions X + Y?
     Print the expected value of X, Y and X+Y.
     #+begin_src R
 
     #+end_src
 
-12) Can you put the three distributions X, Y, and X + Y into one plot
+13) Can you put the three distributions X, Y, and X + Y into one plot
     array to make them comparable, and indicate the expected values
     with thick red, blue and yellow vertical lines?
 
@@ -77,6 +82,5 @@
 
     #+end_src
 
-13) Do expected value and variance follow simple additive laws if the
+14) Do expected value and variance follow simple additive laws if the
     underlying distributions are not independent? Why or why not?
-
